[package]
name = "prisms"
version = "0.1.0"
edition = "2021"

keywords = ["prism"]
authors = ["luoxiaozero"]
description = "Prism at compile time for rust"
repository = "https://github.com/luoxiaozero/prisms"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
boa_engine = "0.17.3"
proc-macro2 = "1.0.67"
quote = "1.0.33"
litrs = "0.4.0"
